[package]
name = "qlib-rs"
version = "0.1.1"
edition = "2021"
description = "A flexible in-memory database library"
license-file = "LICENSE"

[features]
default = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.21" }
serde_json = { version = "1.0" }
async-trait = { version = "0.1" }
futures-util = "0.3.31"
log = "0.4"
rhai = "1.22.2"
argon2 = "0.5.3"
rand = "0.8.5"

[dev-dependencies]
env_logger = "0.10"
