[package]
name = "qlib-rs"
version = "0.1.1"
edition = "2021"
description = "A flexible in-memory database library"
license-file = "LICENSE"

[features]
default = ["derive"]
derive = ["qlib-rs-derive"]

[dependencies]
qlib-rs-derive = { path = "./qlib-rs-derive", optional = true }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
serde_json = { version = "1.0" }
futures-util = "0.3.31"
log = "0.4"
argon2 = "0.5.3"
rand = "0.8.5"
chrono = { version = "0.4", features = ["serde"] }
cel = "0.11.0"
base64 = "0.22"
bincode = "1.3"
bytes = "1.5"
itertools = "0.14.0"
time = { version = "0.3.42", features = ["serde", "parsing", "formatting"] }
lru = "0.12"
ahash = { version = "0.8", features = ["serde"] }
rustc-hash = "2.0.0"
smallvec = { version = "1.13.2", features = ["serde"] }
crossbeam = "0.8.4"
mio = { version = "1.0.4", features = ["net", "os-poll"] }
anyhow = "1.0"
url = "2.5.7"
sorted-vec = { version = "0.8.10", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "store_benchmarks"
harness = false

